--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="description" content="Desafio trainee 2018.1">
     <meta name="author" content="GTi Engenharia Jr.">
     <title>GTi Treinamento - Site do Aluísio</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://cdn.glitch.com/ae3dc6e7-a56a-4b8d-a6c2-6380127472f4%2Fico.png?1522797799116">
   </head>
   <body>
