--- a/index.html
+++ b/index.html
@@ -171,5 +171,5 @@
       </section>
     </article>
   </body>
-  <!--<iframe src="https://running-dots.glitch.me/"></iframe>-->
+  <iframe src="https://running-dots.glitch.me/"></iframe>
 </html>
